Actualizar imágenes a formato WebP y eliminar archivos obsoletos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reciclado de Aluminio</title>
-    <link rel="shortcut icon" href="src/img/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="src/img/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -39,7 +39,7 @@
 
     <section class="sobre-empresa">
         <div class="imagen">
-            <img src="src/img/IA simulacion.png" alt="Imagen de latas">
+            <img src="src/img/IA simulacion.webp" alt="Imagen de latas">
         </div>
         <div class="contenido-simulador">
             <h2>Reciclado Aluminio</h2>
@@ -56,7 +56,7 @@
         <h3>Simulación</h3>
         <div class="simular-opcion">
             <div class="simular-datos">
-                <img src="src/img/simulacion1.jpg" alt="Simulación 1" class="imagen">
+                <img src="src/img/simulacion1.webp" alt="Simulación 1" class="imagen">
                 <h4 class="simular-titulo">Simulación del Aluminio</h4>
                 <p>Se simulara la producción de aluminio reciclable. Este proceso se realizará partir de la entrada de
                     basura mediante una serie de camiones, donde llevan los residuos a una planta de reciclaje. El
@@ -65,7 +65,7 @@
                 <a href="procesoSimulacion.html" class="boton">Simular ya</a>
             </div> <!--.simular-datos -->
             <div class="imagen">
-                <img src="src/img/fabrica.png" alt="Fabrica de aluminio">
+                <img src="src/img/fabrica.webp" alt="Fabrica de aluminio">
             </div>
         </div>
     </section>
@@ -74,19 +74,19 @@
         <h3>Nosotros</h3>
         <div class="nosotros-alumnos">
             <div class="nosotros-alumno">
-                <img src="src/img/usuario.png" alt="imagen usuario">
+                <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Lavalle, Juan Martín</p>
             </div>
             <div class="nosotros-alumno">
-                <img src="src/img/usuario.png" alt="imagen usuario">
+                <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Llobeta, Juan Lucas</p>
             </div>
             <div class="nosotros-alumno">
-                <img src="src/img/usuario.png" alt="imagen usuario">
+                <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Mansilla, Joel Armando</p>
             </div>
             <div class="nosotros-alumno">
-                <img src="src/img/usuario.png" alt="imagen usuario">
+                <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Vaca, Daniel Agustín</p>
             </div>
         </div>
