--- a/procesoSimulacion.html
+++ b/procesoSimulacion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reciclado de Aluminio</title>
-    <link rel="shortcut icon" href="src/img/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="src/img/logo.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -62,19 +62,19 @@
 
         <div class="galeria-entradas">
             <div class="entrada">
-                <img src="src/img/camion.jpeg" alt="simular opción 1">
+                <img src="src/img/camion.webp" alt="simular opción 1">
                 <p>Entrada de basura</p>
             </div>
             <div class="entrada">
-                <img src="src/img/trituradora.png" alt="simular opción 1">
+                <img src="src/img/trituradora.webp" alt="simular opción 1">
                 <p>Trituradora de aluminio</p>
             </div>
             <div class="entrada">
-                <img src="src/img/aluminio fundido.png" alt="simular opción 1">
+                <img src="src/img/aluminio fundido.webp" alt="simular opción 1">
                 <p>Fundición de aluminio</p>
             </div>
             <div class="entrada">
-                <img src="src/img/molde.jpg " alt="simular opción 1">
+                <img src="src/img/molde.webp " alt="simular opción 1">
                 <p>Moldeado de aluminio</p>
             </div>
         </div>
