Eliminar margen superior en párrafos y agregar clase para margen superior en sección de resultados

--- a/procesoSimulacion.html
+++ b/procesoSimulacion.html
@@ -135,7 +135,7 @@
         </div>
     </section>
 
-    <section id="resultados-section" class="contenedor hidden">
+    <section id="resultados-section" class="contenedor hidden margin-top">
         <h3>Resultados de la Simulación <i class="fas fa-chart-pie"></i></h3>
         <div class="contenedor-carga">
             <div class="loading-container" id="CO2">
