Agregar clase de margen a secciones y ajustar estilo de margen superior

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </video>
     </div>
 
-    <section id="sobre-empresa" class="sobre-empresa">
+    <section id="sobre-empresa" class="sobre-empresa margin-resultado">
         <div class="imagen">
             <img src="src/img/IA simulacion.webp" alt="Imagen del proceso de reciclaje">
         </div>
@@ -76,40 +76,24 @@
         </div>
     </section>
 
-    <section id="nosotros" class="nosotros">
+    <section id="nosotros" class="nosotros margin-resultado">
         <h3>Nuestro Equipo</h3>
         <div class="nosotros-alumnos">
             <div class="nosotros-alumno">
                 <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Lavalle, Juan Martín</p>
-                <div class="redes">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                </div>
             </div>
             <div class="nosotros-alumno">
                 <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Llobeta, Juan Lucas</p>
-                <div class="redes">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                </div>
             </div>
             <div class="nosotros-alumno">
                 <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Mansilla, Joel Armando</p>
-                <div class="redes">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                </div>
             </div>
             <div class="nosotros-alumno">
                 <img src="src/img/usuario.webp" alt="imagen usuario">
                 <p>Vaca, Daniel Agustín</p>
-                <div class="redes">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                </div>
             </div>
         </div>
     </section>
