Agregar estilo y contenido a la sección "Nuestro Equipo"

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
 
     <section id="nosotros" class="nosotros margin-resultado">
         <h3>Nuestro Equipo</h3>
+        <div class="descripcion-equipo">
+            <p>Somos estudiantes de 4° año de Ingeniería en Sistemas de Información de la Universidad Tecnológica
+                Nacional - Facultad Regional Tucumán (UTN FRT). Como parte de la materia Simulación, hemos desarrollado
+                este trabajo colaborativo enfocado en los procesos de reciclaje, específicamente en la reutilización del
+                aluminio y su impacto positivo en el medio ambiente. Nuestro objetivo es aplicar los conocimientos
+                adquiridos sobre modelado y simulación de sistemas para contribuir a la comprensión de procesos
+                industriales sostenibles.</p>
+        </div>
         <div class="nosotros-alumnos">
             <div class="nosotros-alumno">
                 <img src="src/img/usuario.webp" alt="imagen usuario">
