Actualizar el pie de página con nueva estructura y contenido, incluyendo enlaces a redes sociales y descripción del proyecto.

--- a/index.html
+++ b/index.html
@@ -107,13 +107,38 @@
     </section>
 
     <footer class="footer">
-        <div class="contenedor">
-            <p>Trabajo Final Integrador. Simulación 4K1 2024.</p>
-            <div class="redes-sociales">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+        <div class="footer-grid">
+            <div class="footer-col">
+                <h3>Aluminio <span>Reciclado</span></h3>
+                <p>Proyecto de simulación que demuestra los beneficios ambientales y económicos del reciclaje de
+                    aluminio. Cada tonelada de aluminio reciclado ahorra 9 toneladas de emisiones de CO2 y contribuye a
+                    un futuro más sostenible.</p>
+                <p class="redes-titulo"><i class="fas fa-user-circle"></i> Redes del desarrollador:</p>
+                <div class="redes-sociales">
+                    <a href="https://github.com/Juanmartin19l" target="_blank" title="GitHub del desarrollador"><i
+                            class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/juan-mart%C3%ADn-lavalle/" target="_blank"
+                        title="LinkedIn del desarrollador"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
+            <div class="footer-col">
+                <h3>Enlaces rápidos</h3>
+                <ul class="nav-footer">
+                    <li><a href="#sobre-empresa"><i class="fas fa-chevron-right"></i> Sobre el proyecto</a></li>
+                    <li><a href="#tipo-simulacion"><i class="fas fa-chevron-right"></i> Simular ahora</a></li>
+                    <li><a href="#nosotros"><i class="fas fa-chevron-right"></i> Nuestro equipo</a></li>
+                    <li><a href="procesoSimulacion.html"><i class="fas fa-chevron-right"></i> Proceso de simulación</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="contenedor">
+            <p class="desarrollador">
+                <i class="fas fa-code"></i> Desarrollado por <a href="https://github.com/Juanmartin19l"
+                    target="_blank">Juan Martín Lavalle</a> | <a
+                    href="https://www.linkedin.com/in/juan-mart%C3%ADn-lavalle/" target="_blank">LinkedIn</a> | Trabajo
+                Final Integrador - Simulación 4K1 2024
+            </p>
         </div>
     </footer>
 
