--- a/procesoSimulacion.html
+++ b/procesoSimulacion.html
@@ -38,7 +38,7 @@
         </video>
     </div>
 
-    <section class="que-simular">
+    <section id="referencias" class="que-simular">
         <h2>Simulación del Aluminio <i class="fas fa-recycle"></i></h2>
         <p>La empresa santafesina SICAMAR METALES SA se dedica al reciclaje de aluminio, buscando un producto sostenible
             y de alta calidad. Producir aluminio desde cero consume mucha energía y contribuye a la emisión de gases de
@@ -168,14 +168,38 @@
         </div>
     </section>
 
+    <!-- ...código existente anterior... -->
+
     <footer class="footer">
-        <div class="contenedor">
-            <p>Trabajo Final Integrador. Simulación 4K1 2024.</p>
-            <div class="redes-sociales">
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+        <div class="footer-grid">
+            <div class="footer-col">
+                <h3>Aluminio <span>Reciclado</span></h3>
+                <p>Este simulador forma parte de un proyecto académico que demuestra el impacto positivo del reciclaje
+                    de aluminio en la reducción de emisiones de CO2 y la optimización de recursos industriales.</p>
+                <p class="redes-titulo"><i class="fas fa-user-circle"></i> Redes del desarrollador:</p>
+                <div class="redes-sociales">
+                    <a href="https://github.com/Juanmartin19l" target="_blank" title="GitHub del desarrollador"><i
+                            class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/juan-mart%C3%ADn-lavalle/" target="_blank"
+                        title="LinkedIn del desarrollador"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
+            <div class="footer-col">
+                <h3>Navegación</h3>
+                <ul class="nav-footer">
+                    <li><a href="index.html"><i class="fas fa-chevron-right"></i> Volver al inicio</a></li>
+                    <li><a href="#resultados-section"><i class="fas fa-chevron-right"></i> Ver resultados</a></li>
+                    <li><a href="#referencias"><i class="fas fa-chevron-right"></i> Referencias</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="contenedor">
+            <p class="desarrollador">
+                <i class="fas fa-code"></i> Desarrollado por <a href="https://github.com/Juanmartin19l"
+                    target="_blank">Juan Martín Lavalle</a> | <a
+                    href="https://www.linkedin.com/in/juan-mart%C3%ADn-lavalle/" target="_blank">LinkedIn</a> | UTN FRT
+                - 2024
+            </p>
         </div>
     </footer>
 
