Ajustar tamaño de fuente en los elementos de entrada y modificar la estructura de los valores del slider para mejorar la presentación

--- a/procesoSimulacion.html
+++ b/procesoSimulacion.html
@@ -97,7 +97,8 @@
                 <div class="slider">
                     <input type="range" class="input" id="sliderMin" name="sliderMin" min="5" max="20" value="20"
                         oninput="document.getElementById('sliderMinValue').innerText = this.value">
-                    <span id="sliderMinValue">20</span> toneladas
+                    <p> <span id="sliderMinValue">20</span> Toneladas
+                    </p>
                 </div>
             </div>
 
@@ -106,7 +107,8 @@
                 <div class="slider">
                     <input type="range" class="input" id="sliderMax" name="sliderMax" min="21" max="32" value="30"
                         oninput="document.getElementById('sliderMaxValue').innerText = this.value">
-                    <span id="sliderMaxValue">30</span> toneladas
+                    <p><span id="sliderMaxValue">30</span> Toneladas</p>
+
                 </div>
             </div>
 
